deps/v8/test/message/strict-octal-use-strict-before.out
*%(basename)s:32: SyntaxError: Octal literals are not allowed in strict mode.
  "use\040strict";
       ^^
SyntaxError: Octal literals are not allowed in strict mode.
